--- a/css/app.css
+++ b/css/app.css
@@ -1,41 +1,16 @@
-/* body {  background-color: #efefef; } */
+.container{
+  width: 500px;
+  height: 500px;
+  background-color: black;
+  position: absolute;
+  top: 200px;
+  left: 300px;
+  padding: 20px 30px;
+}
 
-/* .box {
-  position: relative;
-  left: 0;
+.item {
   width: 100px;
   height: 100px;
-  background-color: pink;
-} */
-
-/* #start {
-  display: block;
-}
-#prev {
-  display: none;
-} */
-
-/* Aula 33 */
-ul {
-  list-style: none;
-  padding: 0;
-  width: 100%;
-  height: 70px;
-  background-color: #000;
-  display: flex;
-  align-items: center;
-}
-li {
-  /* color: #fff; */
-  margin-left: 20px;
-  text-transform: uppercase;
-}
-a {
-  color: #fff;
-  padding: 25px 20px;
-}
-a:hover, 
-  a.active {
-    background-color: yellow;
-    color: #000;
+  background-color: red;
+  display: inline-block;
 }
